# lerobot

src/lerobot_description/rviz/: display.rviz
src/lerobot_gui/: package.xml  setup.cfg  setup.py
src/lerobot_gui/lerobot_gui/: joint_state_gui.py
src/lerobot_moveit/: package.xml
src/lerobot_moveit/config/: kinematics.yaml
